<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Clever Alarm</string>
    <string name="database_name">clever_alarm_database</string>
    
    <string name="button_settings">Settings</string>
    <string name="button_save">Save</string>
    <string name="button_quit">Quit</string>
    <string name="button_calendars">Calendars</string>
    <string name="button_calendars_description">Select which calendars to track</string>
    
    <string name="synchronizing">Synchronizing</string>
    <string name="calendar_updated">Calendar has been updated</string>
    
    <string name="notification_example">Notification example</string>
    
    <string name="sleep_mode">Sleep mode</string>
    
    <string name="shortday_MO">MO</string>
    <string name="shortday_TU">TU</string>
    <string name="shortday_WE">WE</string>
    <string name="shortday_TH">TH</string>
    <string name="shortday_FR">FR</string>
    <string name="shortday_SA">SA</string>
    <string name="shortday_SU">SU</string>
    
    <string name="day_MO">Monday</string>
    <string name="day_TU">Tuesday</string>
    <string name="day_WE">Wednesday</string>
    <string name="day_TH">Thursday</string>
    <string name="day_FR">Friday</string>
    <string name="day_SA">Saturday</string>
    <string name="day_SU">Sunday</string>
    
    <string name="state">State</string>
    <string name="time">Time</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    
    <string name="event">Event</string>
    <string name="events">Events</string>
    <string name="date">Date</string>
    <string name="alarm">Alarm</string>
    <string name="begin">Begin</string>
    <string name="end">End</string>    
    
    <string name="not_set">Not set!</string>
	<string name="alarm_set">Alarm has been set!</string>
	<string name="alarm_not_set">Alarm has been canceled!</string>
	<string name="sleepmode_set">Sleep mode has been set!</string>
	<string name="sleepmode_not_set">Sleep mode has been canceled!</string>
	<string name="button_settings_ringtones">Ringtone</string>
	<string name="button_settings_ringtones_description">Set the ringtone for alarm</string>
	<string name="select_ringtone">Select ringtone</string>
	<string name="test_ringing">Test ringing</string>
	<string name="ringing_text">Clever Alarm</string>
	<string name="current_ringtone_name">Current ringtone:</string>
	<string name="no_ringtone">No rigntone selected!</string>
	<string name="ringing_button_stop">Stop</string>
	<string name="ringing_button_snooze">Snooze</string>
	<string name="settings_volume">Volume of ringing:</string>
	<string name="settings_minutes">minutes</string>
	<string name="settings_snooze">Snooze time:</string>
	<string name="event_advance">Event advance</string>
	<string name="advance">Advance</string>
	<string name="advance_set">Time advance has been set!</string>
	<string name="advance_not_set">Time advance has been set!</string>
    
    <string name="button_settings_timeformat">Time format</string>
	<string name="button_settings_timeformat_description">Set format for time</string>
	<string name="time_format">Time format</string>
	<string name="sleep">Sleep</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="hour">hour</string>
    <string name="hours">hours</string>
    <string name="button_settings_sleepmode">Sleepmode</string>
    <string name="button_settings_sleepmode_description">Ringer mode in sleepmode</string>
    <string name="settings_ringmode">Ringing in sleepmode:</string>
    <string name="silent">Silent</string>
    <string name="vibrate">Vibrate</string>
    <string name="alarm_missed">An alarm occured while the device was switched off.</string>
    
</resources>
