<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="match_parent"
  android:layout_height="match_parent">
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="horizontal">
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_height="wrap_content" android:text="@string/current_ringtone_name" android:layout_marginTop="5dip"></TextView>
    <TextView android:layout_width="wrap_content" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_height="wrap_content" android:text="@string/not_set" android:id="@+id/settingsRingtoneName"></TextView>
    <Button android:text="@string/select_ringtone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="5dip" android:id="@+id/selectRingtone2"></Button>
    <TextView android:layout_width="wrap_content" android:id="@+id/textView2" android:layout_height="wrap_content" android:textAppearance="?android:attr/textAppearanceLarge" android:layout_marginTop="5dip" android:layout_marginBottom="5dip" android:text="@string/settings_volume"></TextView>
    <SeekBar android:layout_width="match_parent" android:layout_height="wrap_content" android:progress="50" android:id="@+id/setVolumeBar" android:layout_marginLeft="15dip" android:layout_marginRight="15dip"></SeekBar>
    <Button android:layout_height="wrap_content" android:layout_marginTop="15dip" android:id="@+id/playRingtone" android:text="@string/test_ringing" android:layout_width="wrap_content" android:layout_gravity="center"></Button>
    
</LinearLayout>
