<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<ScrollView 
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		<LinearLayout
    		android:orientation="vertical"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent"
    	android:layout_gravity="center_horizontal">
    	<TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:padding="10dip" android:text="@string/settings_ringmode"/>
    	
    	<RadioGroup android:layout_gravity="center" android:layout_marginTop="30dp" android:layout_height="wrap_content" android:layout_width="wrap_content">
    	<LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:orientation="vertical" android:layout_width="wrap_content">
    		<RadioGroup android:id="@+id/radioGroup1" android:layout_weight="1" android:layout_height="0dp" android:layout_width="wrap_content">
    			<RadioButton android:checked="true" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/silent" android:id="@+id/radioSilent"></RadioButton>
    			<RadioButton android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="@string/vibrate" android:id="@+id/radioVibrate"></RadioButton>
    		</RadioGroup>
    	</LinearLayout>
    	</RadioGroup>
    	
		</LinearLayout>			    
	</ScrollView>    
</LinearLayout>
