<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:weightSum="1" 
    android:orientation="horizontal" 
    android:layout_height="fill_parent" 
    android:baselineAligned="true"
    android:id="@+id/tab_day_background" 
    android:background="@drawable/tab_day_bg"
    >
    <ScrollView android:layout_height="wrap_content" android:id="@+id/scrollView2" android:layout_width="match_parent">
    <LinearLayout
		android:layout_height="fill_parent"
     	android:id="@+id/linearLayout1" 
     	android:layout_width="fill_parent" 
  	    android:orientation="vertical" 
  	    android:weightSum="1"
      >
        <TextView android:layout_width="wrap_content"
        	 android:textAppearance="?android:attr/textAppearanceLarge" 
        	 android:text="day" 
        	 android:layout_height="wrap_content" 
        	 android:id="@+id/tv_day" 
        	 android:layout_gravity="center" 
        	 android:textStyle="bold"
        />
        
		<LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout4">
        	<TextView android:textAppearance="?android:attr/textAppearanceMedium"
     	    	android:text="@string/state" 
 	  	   	    android:layout_width="wrap_content" 
     	        android:layout_height="wrap_content"
    	        android:paddingLeft="15dp"
          	/>
 		  	<TextView android:textAppearance="?android:attr/textAppearanceMedium" 
        			  android:text=":" 
        			  android:layout_height="wrap_content" android:layout_width="wrap_content"
        	/>
        </LinearLayout>
        

          <LinearLayout android:id="@+id/linearLayout2"
         	  android:orientation="vertical" 
         	  android:layout_gravity="center" 
              android:layout_height="wrap_content" 
         	  android:layout_width="fill_parent"
          >
         	<RadioGroup android:layout_gravity="center" 
				android:id="@+id/radioGroup1" 
         		android:layout_height="wrap_content" 
         		android:layout_width="wrap_content" 
         		android:orientation="horizontal"
         	>
                <RadioButton android:text="@string/on" 
                	android:layout_height="wrap_content" 
                	android:id="@+id/alarmOn" 
                	android:layout_width="wrap_content" 
                	android:checked="true"
                />
                <RadioButton android:text="@string/off" 
                	android:layout_height="wrap_content" 
                	android:id="@+id/alarmOff" 
                	android:layout_width="wrap_content"
                />
            </RadioGroup>
        </LinearLayout>
        
        <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:id="@+id/linearLayout3">
			<TextView android:textAppearance="?android:attr/textAppearanceMedium" 
      		 	android:id="@+id/textView2" 
     		   	android:text="@string/time" 
    	    	android:layout_width="wrap_content" 
      		  	android:layout_height="wrap_content"
      		  	android:paddingLeft="15dp"
       		 />
             <TextView android:textAppearance="?android:attr/textAppearanceMedium" 
        	  		   android:text=":" 
        			   android:layout_height="wrap_content" android:layout_width="wrap_content"
        	 />
          </LinearLayout>

        <TimePicker android:layout_gravity="center" 
        	android:id="@+id/timeAlarm" 
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content"
        />
        
        <Button android:text="@string/button_save" 
        	android:id="@+id/saveAlarm" 
        	android:layout_gravity="center" 
        	android:layout_height="wrap_content" 
        	android:layout_width="wrap_content" 
        	android:textSize="28px"
        	/>
        	
    </LinearLayout>
    </ScrollView>
</LinearLayout>