<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:id="@+id/dayBackground"
    android:background="@drawable/tab_event_bg"
    >
   <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout3" android:layout_width="wrap_content" android:paddingLeft="15dp">
    		<TextView android:layout_height="wrap_content" android:text="@string/event" android:textAppearance="?android:attr/textAppearanceSmall"  android:layout_width="wrap_content"  android:textColor="@android:color/white" android:textStyle="bold"/>
    		<TextView android:layout_height="wrap_content" android:text=": " android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:textColor="@android:color/white" android:textStyle="bold"/>
    		<TextView android:layout_height="wrap_content" android:text="" android:maxLength="18" android:id="@+id/dayEventName" android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@android:color/white" android:maxWidth="150dp" android:layout_width="fill_parent"/>
 	</LinearLayout>
     	<LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout4" android:paddingLeft="15dp">
 			<TextView android:textStyle="bold" android:text="@string/begin" android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@android:color/white" android:layout_width="wrap_content"  android:layout_height="wrap_content"></TextView>
			<TextView android:layout_height="wrap_content" android:text=": " android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@android:color/white" android:layout_width="wrap_content" android:textStyle="bold"></TextView>
	    	<TextView android:layout_height="wrap_content" android:text="" android:maxLength="16" android:id="@+id/dayEventBeginDate" android:textColor="@android:color/white" android:textAppearance="?android:attr/textAppearanceSmall" android:maxWidth="150dp" android:layout_width="fill_parent"></TextView>
    </LinearLayout>
     	<LinearLayout android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/linearLayout4" android:paddingLeft="15dp">
 			<TextView android:textStyle="bold" android:text="@string/end" android:textAppearance="?android:attr/textAppearanceSmall" android:layout_width="wrap_content" android:textColor="@android:color/white" android:layout_height="wrap_content"></TextView>
			<TextView android:layout_height="wrap_content" android:text=": " android:textAppearance="?android:attr/textAppearanceSmall"  android:layout_width="wrap_content" android:textColor="@android:color/white" android:textStyle="bold"></TextView>
	    	<TextView android:layout_height="wrap_content" android:text="" android:maxLength="16" android:id="@+id/dayEventEndDate" android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="@android:color/white" android:maxWidth="150dp" android:layout_width="fill_parent"></TextView>
    </LinearLayout>


</LinearLayout>